# query-yew

./: .gitignore  Cargo.toml  README.md  index.html  main.js  package.json
src/: answer.rs  main.rs  question.rs
src/answer/: create_answer_form.rs  mod.rs  view_answer_form.rs  view_answers.rs
src/header/: mod.rs
src/question/: create_question_form.rs  create_questions.rs  mod.rs  view_question_form.rs  view_questions.rs
src/result/: mod.rs  view_results.rs
