[package]
name = "questionnaire-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
reqwasm = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen-futures = "0.4.30"
patternfly-yew = "0.1.3"