[package]
name = "query-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
reqwasm = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"
patternfly-yew = "0.2.2"
serde_json = "1.0.85"
web-sys = "0.3.60"
rand = "0.8.5"
gloo = "0.8.0"
log = "0.4.17"
wasm-logger = "0.2.0"
chrono = "0.4.22"
